# TrendRadar

./: .gitignore  AI_ENHANCED_SCORING_GUIDE.md  AI_ENHANCEMENT_PLAN.md  AI_FEATURES.md  AI_SCORING_IMPLEMENTATION_REVIEW.md  AI_SCORING_OPTIMIZATION_PLAN.md  README.md  ai_analyzer.py  ai_prompts.py  main.py  pyproject.toml  requirements.txt  test_json_retry.py  vector_category_store.py
config/: config.yaml
docker/: .env  docker-compose-build.yml
mcp_server/: server.py
mcp_server/services/: data_service.py  parser_service.py
mcp_server/tools/: ai_analysis.py
mcp_server/utils/: validators.py
output/: category_store.json
tests/: test_ai_analyzer.py  test_ai_analyzer_extended.py  test_ai_repository.py  test_batch_processing.py  test_json_retry.py  test_vector_category_store.py
